// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList correctly 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseItem
      amount={10}
      createdAt={0}
      description="Gum"
      id="0"
      key="0"
      note=""
    />
    <ExpenseItem
      amount={100}
      createdAt={-259200000}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseItem
      amount={200}
      createdAt={432000000}
      description="Credit Card"
      id="2"
      key="2"
      note=""
    />
  </div>
</div>
`;

exports[`should render ExpenseList correctly with empty expense 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expense
      </span>
    </div>
  </div>
</div>
`;
